--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,4 @@
-
-# Nome da Actions:  
+# Nome da Actions:
 name: Snake Game
 
 # Controlador do tempo que sera feito a atualização dos arquivos.
@@ -18,35 +17,36 @@ jobs:
     steps:
 
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2 # Considere usar @v4 para maior estabilidade
 
     # Repositorio que será utilizado para gerar os arquivos.
-      - uses: Platane/snk@master
+      - uses: Platane/snk@master # Considere usar uma tag de versão específica, se disponível e recomendada
         id: snake-gif
         with:
           github_user_name: pygaudiello
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - run: git status
+      - run: git status # Esta etapa é apenas informativa e não afeta a funcionalidade
 
       # Para as atualizações.
       - name: Push changes
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@master # Considere usar uma tag de versão específica, como @v0.8.8 ou a mais recente recomendada
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+          branch: main # <--- Alterado de 'master' para 'main'. Verifique o nome do seu branch principal!
+          force: true # 'force: true' é necessário para sobrescrever o arquivo, mas use com cautela.
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: crazy-max/ghaction-github-pages@v2.1.3 # Comentado, pois geralmente não é necessário para o snake do README
+      #   with:
+      #     # the output branch we mentioned above
+      #     target_branch: output # Verifique se este branch e o uso do GitHub Pages é o que você precisa
+      #     build_dir: dist
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a multi-line script # Esta etapa é apenas informativa
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Workflow concluído.
+          echo Verifique os arquivos gerados na pasta dist no branch principal.
