--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,52 +1,40 @@
-# Nome da Actions:
+# Nome da Action
 name: Snake Game
 
-# Controlador do tempo que sera feito a atualização dos arquivos.
+# Controlador do tempo: atualização a cada 5 horas
 on:
   schedule:
-      # Será atualizado a cada 5 horas.
     - cron: "0 */5 * * *"
-
-# Permite executar na na lista de Actions (utilizado para testes de build).
   workflow_dispatch:
 
-# Regras
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Faz checkout do repositório
+      - uses: actions/checkout@v4
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2 # Considere usar @v4 para maior estabilidade
-
-    # Repositorio que será utilizado para gerar os arquivos.
-      - uses: Platane/snk@master # Considere usar uma tag de versão específica, se disponível e recomendada
+      # Gera os arquivos do Snake Game
+      - uses: Platane/snk@v3.2.0  # Recomendo usar uma versão estável, verifique a mais recente
         id: snake-gif
         with:
           github_user_name: pygaudiello
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - run: git status # Esta etapa é apenas informativa e não afeta a funcionalidade
+      # Verifica o status do git (informativo)
+      - run: git status
 
-      # Para as atualizações.
+      # Faz push das alterações
       - name: Push changes
-        uses: ad-m/github-push-action@master # Considere usar uma tag de versão específica, como @v0.8.8 ou a mais recente recomendada
+        uses: ad-m/github-push-action@v0.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # <--- Alterado de 'master' para 'main'. Verifique o nome do seu branch principal!
-          force: true # 'force: true' é necessário para sobrescrever o arquivo, mas use com cautela.
+          branch: main
+          force: true
 
-      # - uses: crazy-max/ghaction-github-pages@v2.1.3 # Comentado, pois geralmente não é necessário para o snake do README
-      #   with:
-      #     # the output branch we mentioned above
-      #     target_branch: output # Verifique se este branch e o uso do GitHub Pages é o que você precisa
-      #     build_dir: dist
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script # Esta etapa é apenas informativa
+      # Mensagem informativa
+      - name: Run a multi-line script
         run: |
-          echo Workflow concluído.
-          echo Verifique os arquivos gerados na pasta dist no branch principal.
+          echo "✅ Workflow concluído."
+          echo "🎯 Verifique os arquivos gerados na pasta 'dist' no branch 'main'."
