--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Gera os arquivos do Snake Game
-      - uses: Platane/snk@v3.2.0  # Recomendo usar uma versão estável, verifique a mais recente
+      - uses: Platane/snk@v3.3.0 
         id: snake-gif
         with:
           github_user_name: pygaudiello
