--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,9 +31,10 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@v0.8.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_PAT }}
           branch: main
           force: true
+
 
       # Mensagem final informativa
       - name: Run a multi-line script
