--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,5 @@
-# Nome da Action
 name: Snake Game
 
-# Disparadores: agendamento a cada 5 horas ou manualmente
 on:
   schedule:
     - cron: "0 */5 * * *"
@@ -16,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Geração do Snake Game
-      - uses: Platane/snk@v3.3.0  # Verifique se há versão mais recente: https://github.com/Platane/snk/releases
+      - uses: Platane/snk@v3.3.0
         with:
           github_user_name: pygaudiello
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -27,17 +25,22 @@ jobs:
       # Verifica o status do git (opcional, informativo)
       - run: git status
 
+      # Configura o usuário git para commits e push
+      - name: Configura git user
+        run: |
+          git config user.name "pygaudiello"
+          git config user.email "pahgaudiello@gmail.com"
+
       # Faz push das alterações para o branch principal
       - name: Push changes
-        uses: ad-m/github-push-action@v0.8.0
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          branch: main
-          force: true
-
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/pygaudiello/pygaudiello.git
+          git push origin main --force
 
       # Mensagem final informativa
       - name: Run a multi-line script
         run: |
-          echo "✅ Workflow concluído com sucesso!"
-          echo "🎯 Arquivos gerados: dist/github-contribution-grid-snake.svg e dist/github-contribution-grid-snake.gif"
+          echo "Workflow concluído com sucesso!"
+          echo "Arquivos gerados: dist/github-contribution-grid-snake.svg e dist/github-contribution-grid-snake.gif"
