--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,10 +34,11 @@ jobs:
       # Faz push das alterações para o branch principal
       - name: Push changes
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/pygaudiello/pygaudiello.git
-          git push origin main --force || (echo "Git push falhou com código $?"; git status; git log -1; exit 1)
+          git push origin main --force || (echo "❌ Git push falhou com código $?"; git status; git log -1; exit 1)
+
 
 
       # Mensagem final informativa
